# catalog-automation-engine

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
ai/: __init__.py  llm_summary.py
catalog-automation-engine/: README.md  catalog.db  config.py  main.py  requirements.txt  test_catalog.db
catalog-automation-engine/ai/: __init__.py  llm_summary.py
catalog-automation-engine/data/: sample_catalog.csv
catalog-automation-engine/database/: db_manager.py
catalog-automation-engine/reporting/: metrics.py  report_generator.py
catalog-automation-engine/validators/: __init__.py  base_validator.py  inventory_validator.py  price_validator.py  sku_validator.py
tests/: test_llm_summary.py  test_main.py
