[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "requirements-pipeline"
version = "0.1.0"
description = "Catalog automation engine with AI-generated executive summaries"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "openai>=0.27.0",
    "pandas>=1.5.0",
]

[tool.setuptools]
packages = ["ai", "catalog-automation-engine"]
